--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
     ext.kotlin_version = "1.5.0"
+    ext{
+        navigationVersion = '2.2.1'
+        version_work = "1.0.0-alpha11"
+        version_glide = "4.8.0"
+        roomVersion = '2.3.0'
+        retrofitVersion = '2.8.1'
+    }
     repositories {
         google()
         mavenCentral()
@@ -8,6 +15,7 @@ buildscript {
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.1"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
